2001-10-02  Per Bothner  <per@bothner.com>

	* descend.xql:  New test program.
	* expdescend.xml:  New expected output.
	* Makefile.am (check-descend, descend):  New rules.

2001-09-25  Per Bothner  <per@bothner.com>

	* multab.xql: Remove no-longer-needed outermost parens.
	* Makefile.am (check-test1, check-maketab1):  Better output.

2001-09-24  Per Bothner  <per@bothner.com>

	* multab.xql:  New test - generate multiplication table.
	* expectedmul.xml:  New file - expected output of multab.xql.
	* Makefile.am:  Update for new test.

2001-08-23  Per Bothner  <per@bothner.com>

	* tab.xml.in. maketab1.xql, tab.html:  New files - new testcase.
	* Makefile.am:  Rules for new testcase.

2001-08-17  Per Bothner  <per@bothner.com>

	* test1.xql:  Remove no-longer needed parens.
	* Makefile.am (SOURCES):  Add expected.xml.

2001-07-18  Per Bothner  <per@bothner.com>

	New directory.
	* test1.xql:  New simple test case for XQuery language.
	* expected1.xml:  Expected output from test1.xql.
