@@ -1,10 +1,10 @@
 <result>
 <row>
 <fld1>a1</fld1>
-<fld2>12</fld2>
+<fld2 align="right">12</fld2>
 </row>
 <row>
-<fld1>b1</fld1>
-<fld2>22</fld2>
+<fld1 align="left">b1</fld1>
+<fld2 align="right">22</fld2>
 </row>
 </result>
